header overlaps fix

--- a/less/theme.less
+++ b/less/theme.less
@@ -182,9 +182,11 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 	right: 0;
 	z-index: 9999;
 	@media @tablet {
-		display: block;
+		display: inline-block;
 		padding: 20px;
 		background-color: @bg-color;
+		position: relative;
+		width: 100%;
 	}
 	.companyheader {
 		display: inline-block;
